--- a/wwwroot/default.html
+++ b/wwwroot/default.html
@@ -285,7 +285,7 @@
           <script>
             document.write(new Date().getFullYear())
           </script>, made with <i class="material-icons">favorite</i> by
-          Brainchild Services for a better world.
+          Brainchild Services
         </div>
       </div>
     </footer>
